--- a/economia.html
+++ b/economia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
 <head>
-	<title>Economia - João Vitor</title>
+	<title>Impactos - João Vitor</title>
 	<link rel='stylesheet' href='csss/economia.css'>
 	<meta charset='UTF-8'>
 </head>
@@ -15,7 +15,7 @@
 				</div>
 				<div id='tema'>
 					<hgroup id='titulo_tema'>
-						<h1>Economia</h1>>
+						<h1>Impactos gerais</h1>>
 					</hgroup>
 				</div>
 				
@@ -24,10 +24,11 @@
 					<ul type='none'>
 						Temas
 						<div id='elementos_lista'>
+							<li><a href="index.html">Home</a></li>
 							<li><a href='educacao.html'>Educação</a></li>
 							<li><a href='saude.html'>Saúde</a></li>
-							<li><a href='economia.html'>Economia</a></li>
-							<li><a href='trabalho.html'>Trabalho</a></li>
+							<li><a href='economia.html'>Impactos</a></li>
+							<li><a href='trabalho.html'>Comércio</a></li>
 						</div>
 					</ul>
 				</nav>
@@ -45,14 +46,16 @@
 				meses no Rio Grande do Sul. Outro impacto causado pelo isolamento é o desemprego, em
 				fevereiro o desemprego subiu para 11,6%, de acordo com o G1.</p>
 				<p>Algumas matérias de jornais e revistas:<br/>
-				● Denúncias de violência contra a mulher sobem 35% durante pandemia, diz
-				Damares. Fonte: Folha de S.Paulo<br/>
-				● Com pandemia, desemprego sobe para 12,6% em abril e atinge 12,8 milhões de
-				brasileiros. Fonte: O Globo<br/>
-				● Bolsa cai 30%, e dólar sobe 16% em março com pandemia de coronavírus. Fonte:
+				&#9679;Denúncias de violência contra a mulher sobem 35% durante pandemia, diz
+				Damares.<br/> Fonte: Folha de S.Paulo<br/>
+				&#9679;Com pandemia, desemprego sobe para 12,6% em abril e atinge 12,8 milhões de
+				brasileiros.<br/> Fonte: O Globo<br/>
+				&#9679;Bolsa cai 30%, e dólar sobe 16% em março com pandemia de coronavírus. <br/>Fonte:
 				Agência Brasil.<br/>
-				● Gastos com auxílio emergencial podem chegar a R$ 154 bilhões em três meses.
+				&#9679;Gastos com auxílio emergencial podem chegar a R$ 154 bilhões em três meses.<br/>
 				Fonte: Agência Senado</p>
+					</ul>
+				</nav>
 		</div>
 </body>
 </html>
