--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
 					<ul type='none'>
 						Temas
 						<div id='elementos_lista'>
+							<li><a href='index.html'>Home</a></li>
 							<li><a href='educacao.html'>Educação</a></li>
 							<li><a href='saude.html'>Saúde</a></li>
-							<li><a href='economia.html'>Economia</a></li>
-							<li><a href='trabalho.html'>Trabalho</a></li>
+							<li><a href='economia.html'>Impactos</a></li>
+							<li><a href='trabalho.html'>Comércio</a></li>
 						</div>
 					</ul>
 				</nav>
 			</header>
 		</div>
-		
 		<div id='corpo'>
 			<h1>Introdução ao site</h1>
+			<p>Antes de entrar a fundo no trabalho e explorar o site, veja o vídeo abaixo sobre algumas formas de prevenção, produzido pelo aluno Yuri.</p>
+			<div align='center'>
+				<iframe id='video_yuri' width="560" height="315" src="https://www.youtube.com/embed/uuOcbVaCl2s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 			<p>Esse site é uma forma de diversificar os produtos finais que geralmente os grupos costumam produzir, isso porque no site podemos colocar diversos tipos de produtos finais de uma vez, ou seja, cada integrante do grupo pode escolher o que deseja para o seu tema e englobar isso na página web entregando como um produto só, mas sendo vários ao mesmo tempo.
 			</p>
 			<p>O site tem uma interface simples e foi projetado e construído pelo próprio grupo, nada foi copiado de outros sites, mas nos inspiramos em alguns exemplos prontos.
@@ -38,4 +42,5 @@
 			</p>
 		</div>
 	</body>
+
 </html>
