--- a/educacao.html
+++ b/educacao.html
@@ -15,7 +15,7 @@
 				</div>
 				<div id='tema'>
 					<hgroup id='titulo_tema'>
-						<h1>Educação</h1>>
+						<h1>Educação</h1>
 					</hgroup>
 				</div>
 				
@@ -24,10 +24,11 @@
 					<ul type='none'>
 						Temas
 						<div id='elementos_lista'>
+							<li><a href="index.html">Home</a></li>
 							<li><a href='educacao.html'>Educação</a></li>
 							<li><a href='saude.html'>Saúde</a></li>
-							<li><a href='economia.html'>Economia</a></li>
-							<li><a href='trabalho.html'>Trabalho</a></li>
+							<li><a href='economia.html'>Impactos</a></li>
+							<li><a href='trabalho.html'>Comércio</a></li>
 						</div>
 					</ul>
 				</nav>
