--- a/saude.html
+++ b/saude.html
@@ -2,7 +2,7 @@
 <html lang='pt-br'>
 <head>
 	<title>Saúde - Isabella/Emanuelle</title>
-	<link rel='stylesheet' href='csss/educacao.css'>
+	<link rel='stylesheet' href='csss/saude.css'>
 	<meta charset='UTF-8'>
 </head>
 <body>
@@ -22,17 +22,57 @@
 			</header>
 			<nav id='menu'>
 					<ul type='none'>
-						Temas
 						<div id='elementos_lista'>
 							<li><a href="index.html">Home</a></li>
 							<li><a href='educacao.html'>Educação</a></li>
 							<li><a href='saude.html'>Saúde</a></li>
 							<li><a href='economia.html'>Impactos</a></li>
 							<li><a href='trabalho.html'>Comércio</a></li>
+							<li><a href="creditos.html">Créditos</a></li>
 						</div>
 					</ul>
 				</nav>
 		</div>
-		implementar pelo pessoal da saude
+		<div id="corpo_texto">
+			<h1>O covid-19 na área da saúde: como Nova Andradina foi afetada?</h1>
+			<p>Diante da ameaça do Covid-19, os setores de saúde sofreram um grande impacto em todo o mundo. Uma das consequências mais graves da disparada de casos de Covid-19 é a super lotação das UTIs, levanto até o limite o sistema de saúde mundial. Ainda que exista um grande número de hospitais com leitos disponíveis, muitos deles não possuem uma quantidade suficiente de equipamentos para tratar determinadas situações causadas pelo coronavírus. </p>
+			<p>Abaixo teremos uma entrevista com o Dr. Cláudio Augusto Abdo Wanderley, especialista em radiologia, para falar sobre os impactos da pandemia na saúde em Nova Andradina:</p>
+			<div id="audios" align="center">
+				<p>Como os hospitais de Nova Andradina estão atuando sobre a pandemia do covid-19?<br/></p>
+				<audio src="audios/primeiro.mp4" preload="auto" controls>
+					<p>Vish, parece que seu navegador não suporta áudio :// <br/>
+						Tenta colocar no Google Chrome, se a sua versão estiver atualizada, vai dar certo, caso contrário, só lamento.
+					</p>
+				</audio>
+				<br/>
+				<p>Há falta de equipamentos nos hospitais?<br/></p>
+				<audio src="audios/segundo.mp4" preload="auto" controls>
+					<p>Vish, parece que seu navegador não suporta áudio :// <br/>
+						Tenta colocar no Google Chrome, se a sua versão estiver atualizada, vai dar certo, caso contrário, só lamento.
+					</p>
+				</audio>
+				<br/>
+				<p>Os pacientes respeitam o uso da máscara e do álcool em gel?<br/></p>
+				<audio src="audios/terceiro.mp4" preload="auto" controls>
+					<p>Vish, parece que seu navegador não suporta áudio :// <br/>
+						Tenta colocar no Google Chrome, se a sua versão estiver atualizada, vai dar certo, caso contrário, só lamento.
+					</p>
+				</audio>
+				<br/>
+				<p>O que o senhor acha do isolamento social?<br/></p>
+				<audio src="audios/quarto.mp4" preload="auto" controls>
+					<p>Vish, parece que seu navegador não suporta áudio :// <br/>
+						Tenta colocar no Google Chrome, se a sua versão estiver atualizada, vai dar certo, caso contrário, só lamento.
+					</p>
+				</audio>
+				<br/>
+				<p>Quanto tempo o senhor estima que essa pandemia durará?<br/></p>
+				<audio src="audios/quinto.mp4" preload="auto" controls>
+					<p>Vish, parece que seu navegador não suporta áudio :// <br/>
+						Tenta colocar no Google Chrome, se a sua versão estiver atualizada, vai dar certo, caso contrário, só lamento.
+					</p>
+				</audio>
+			</div>
+		</div>
 </body>
 </html>
