--- a/trabalho.html
+++ b/trabalho.html
@@ -22,13 +22,13 @@
 			</header>
 			<nav id='menu'>
 					<ul type='none'>
-						Temas
 						<div id='elementos_lista'>
 							<li><a href="index.html">Home</a></li>
 							<li><a href='educacao.html'>Educação</a></li>
 							<li><a href='saude.html'>Saúde</a></li>
 							<li><a href='economia.html'>Impactos</a></li>
 							<li><a href='trabalho.html'>Comércio</a></li>
+							<li><a href="creditos.html">Créditos</a></li>
 						</div>
 					</ul>
 				</nav>
