--- a/index.html
+++ b/index.html
@@ -1,63 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset='UTF-8' />
-		<title>Introdução do Site</title>
-		<link rel="stylesheet" href="csss/estilo.css" />
-	</head>
-	<body>
-		<div id='cabecalho'>
-			<header id='cabecalho_itens'>
-				<div id='titulos'>
-					<hgroup id='titulo_pagina'>
-						<h1>The New Info Times</h1>
-						<h2>Se você não pode fazer uma festa com 20 pessoas, covid-19</h2>
-					</hgroup>
-				</div>
-				<a href='http://ifms.edu.br' target='_blank'><img id='logotipo' src='images/if_logo.jpg' /></a>
-				<nav id='menu'>
-					<ul type='none'>
-						<div id='elementos_lista'>
-							<li><a href='index.html'>Home</a></li>
-							<li><a href='educacao.html'>Educação</a></li>
-							<li><a href='saude.html'>Saúde</a></li>
-							<li><a href='economia.html'>Impactos</a></li>
-							<li><a href='trabalho.html'>Comércio</a></li>
-							<li><a href="creditos.html">Créditos</a></li>
-						</div>
-					</ul>
-				</nav>
-			</header>
-		</div>
-		<div id='corpo'>
-			<h1>Introdução ao site</h1>
-			<p>Antes de entrar a fundo no trabalho e explorar o site, veja o vídeo abaixo sobre algumas formas de prevenção, produzido pelo aluno Yuri.</p>
-			<div align='center'>
-				<iframe id='video_yuri' width="560" height="315" src="https://www.youtube.com/embed/uuOcbVaCl2s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-			<p>
-				Esse site é uma forma de diversificar os produtos finais que geralmente os grupos costumam produzir, isso porque no site podemos colocar diversos tipos de produtos finais de uma vez, ou seja, cada integrante do grupo pode escolher o que deseja para o seu tema e englobar isso na página web entregando como um produto só, mas sendo vários ao mesmo tempo.
-			</p>
-			<p>
-				O site tem uma interface simples e foi projetado e construído pelo próprio grupo, nada foi copiado de outros sites, mas nos inspiramos em alguns exemplos prontos.
-				Como pode-se ver, há um menu do lado esquerdo, onde é possível visitar os temas do trabalho e ver o que cada aluno preparou como produto final. Nada de nenhum trabalho foi alterado pelos alunos que fizeram a página, apenas adaptado para ficar melhor dentro dela, mas todo conteúdo de cada página é responsabilidade de cada aluno a que corresponde a área visitada.</p>
-			<h1>Isolamento social: essa é a primeira vez que passamos por isso?</h1>
-			<p>
-				Algumas pessoas podem se perguntar se a humanidade já passou por algo parecido na história, não apenas numa pandemia, mas no quesito isolamento. Para responder essa pergunta, vamos usar um documento histórico, um livro, mais especificamente o "Diário de Anne Frank", escrito por Anne Frank entre 1942 e 1945, mas foi publicado pelo seu pai, Otto Frank, após a morte da jovem pelos nazistas em 1944.
-			</p>
-			<P>
-				Esse livro é considerado um documento histórico devido aos fatos que nele estão contidos. Ele basicamente conta os pensamentos e os acontecimentos na vida da jovem judia de 12 anos, Anne Frank, que teve que se manter isolada num sótão anexo a uma empresa para ter maiores chances de sobreviver contra os alemães. Com isso, já é possível ver a semelhança entre os dois fatos históricos, afinal, também temos que permanecer isolados para que possam ser amenizados os casos de covid-19, e claro, aumentar a chance de sobrevivência, principalmente do grupo de risco, que hoje são principalmente as pessoas com doenças cardio-respiratórias, e naquela época, os judeus.
-			</P>
-			<p>
-				Mas as semelhanças não param por ai. Assim como nós, aquelas pessoas que estavam no anexo junto com Anne não poderiam parar de aprender, não poderiam ficar sem a educação. Qual foi a solução para eles? Educação a distância. Sim, por melhor que estejamos tecnologicamente hoje, naquela época eles tinham a educação a distância através de cartas. Dentre as várias coisas que eles aprendiam, podemos destacar a taquigrafia e o francês. Eles usavam cartas e livros, e nós usamos a internet, onde podemos nos comunicar e buscar informações com muito mais eficiência e rapidez. Na mesma linha de raciocínio, temos por exemplo as notícias: as 8 pessoas no anexo ficavam sabendo de tudo pelo rádio ou pelos funcionários da empresa, que os ajudavam. Hoje, utilizamos também, na maioria das vezes, a internet como fonte principal de notícia do mundo inteiro.
-			</p>
-			<p>
-				Entretanto, assim como o coronavírus, a guerra atingiu todas as áreas da sociedade, do comércio à saúde. É possível ver isso claramente no livro quando Anne diz em várias partes do mesmo que os talões de racionamento que eles usavam para comprar suprimentos tinham os preços aumentados cada vez mais. E mais, sua saúde só piorava, pois devido às condições precárias, os integrantes do anexo não comiam do jeito que deveriam, não tinham os remédios certos para os problemas que tinham, não tomavam sol e nem se exercitavam o suficiente. Hoje não temos uma situação tão diferente. Boa parte das pessoas não se exercitam bem nem tomam sol o suficiente devido ao isolamento (temos algumas pessoas teimosas que insistem em sair, mas vamos focar em quem cumpre o isolamento), e, devido à perda de emprego, salário insuficiente ou locomoção dificultada, muitas das pessoas (principalmente no Brasil) não tem comido bem, e algumas com certeza nem comeram hoje. E claro, além de muitas pessoas viverem sem o suficiente para comprar o necessário, o "necessário" tem seu preço aumentado constantemente.
-			</p>
-			<p>
-				Espera-se que essa simples comparação entre as épocas possa clarear um pouco as coisas e responder a pergunta inicial. Mas como vimos, mesmo com todos os cuidados, a guerra gerou sequelas que perduram até hoje. Que isso possa servir de exemplo para entendermos que por mais que o isolamento social tenha consequências, a mesma é necessária para evitarmos um mal bem maior.
-			</p>
-		</div>
-	</body>
+<html>
+    <head>
+        <script
+            type="text/javascript"
+            scr="jss/test.js">
+        </script>
+    </head>
+    <body>
+        <button onclick="testJS()">Testa ai</button>
 
+    </body>
 </html>
